--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Khelega Free Fire tournament app</title>
-
+<meta name="google-site-verification" content="iPotYu2f2X5MF_MNTsqTFryide_r-VPWItc8Wn8ctb8" />
   <!-- Primary Meta Tags -->
   <meta name="title" content="Khelega Free Fire tournament ap" />
   <meta name="description" content="Join Khelega Free Fire to play daily esports tournaments, build your gamer profile, and win amazing prizes. Download the app now!" />
