--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <meta name="twitter:description" content="Join Khelega Free Fire to play daily esports tournaments, build your gamer profile, and win amazing prizes." />
   <meta name="twitter:image" content="https://i.ibb.co/5WH4qFrg/IMG-1903-png.jpg" />
 
-  <!-- Icons & Theme -->
-  <link rel="icon" href="https://i.ibb.co/5WH4qFrg/IMG-1903-png.jpg" type="image/png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
   <meta name="theme-color" content="#070B28" />
   <meta name="msapplication-TileColor" content="#070B28" />
-
-  <!-- Web App Manifest -->
-  <link rel="manifest" href="/manifest.json" />
 
   <!-- Language -->
   <meta http-equiv="Content-Language" content="en" />
