--- a/index.html
+++ b/index.html
@@ -467,6 +467,13 @@
       </a>
     </div>
   </div>
+  <div class="legal-links">
+  <a href="/disclaimer">Disclaimer</a>
+  <span>|</span>
+  <a href="/terms">Terms & Conditions</a>
+  <span>|</span>
+  <a href="/privacy">Privacy Policy</a>
+  </div>
   <!-- Footer -->
   <footer>
     &copy; 2025 Khelega Free Fire. All rights reserved.
@@ -824,4 +831,21 @@ body {
   border-radius: 8px;
   margin-top: 1rem;
   border: none;
-}</style>
+}
+.legal-links {
+  background-color: #070B28;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.legal-links a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+  font-size: 1rem;
+}
+
+.legal-links a:hover {
+  text-decoration: underline;
+}
+  </style>
