--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
       </a>
     </div>
   </div>
+  
   <div class="legal-links">
   <a href="/disclaimer">Disclaimer</a>
   <span>|</span>
@@ -480,7 +481,9 @@
   </footer>
 
 </body>
-</html><style>/* Reset */
+</html>
+/*Reset*/
+<style> 
 * {
   margin: 0;
   padding: 0;
@@ -848,4 +851,5 @@ body {
 .legal-links a:hover {
   text-decoration: underline;
 }
+  
   </style>
