--- a/index.html
+++ b/index.html
@@ -337,7 +337,18 @@
   </div>
 
   <div class="banner-separator"></div>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5403591604468080"
+     crossorigin="anonymous"></script>
+<!-- Homepagebanner -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5403591604468080"
+     data-ad-slot="2464134313"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- Games -->
   <div class="section-title-block">
     <div class="section-title">Games</div>
